<resources>
    <string name="app_name">Lab 6</string>
    <string name="name_input">Enter your name</string>
    <string name="button_text">Say Hello</string>
    <string name="hello_world">Hello, World!</string>
</resources>